# OpenGL_Reflection-Mapping-Comparisons

./: CMakeLists.txt  README.md
headers/: camera.h  hello_s.h  mesh.h  model.h  shader.h  shader_s.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/textures/: christmas_photo_studio_05_4k.txt  sky_sphere_link.txt  skybox_link.txt
shaders/: cubic.frag  dual_parabolic.frag  dual_parabolic.vert  dual_parabolic_rect.frag  environment.vert  equirectangular.frag  frag.fs  phong.fs  phong.vert  phong.vs  simple.vert  skybox.frag  skybox.vert  spherical.frag  vert.vs
src/: hello_s.cpp  main.cpp
